test/tests/errors/error-file-get-end-of-file2.sm
// true
// false
/**/
/**/

program{
    file f withbuffer bf;
    bf = 1;
    put(f);
    reset(f);
    get(f);
    get(f);
}